--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/panel.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/panel.scss
@@ -3,7 +3,7 @@
 @import "../base/mixins";
 @import "../base/breakpoints";
 
-// PANEL GROUPS 
+// PANEL GROUPS
 .panel-group {
   align-items: flex-start;
   display: flex;
@@ -190,6 +190,14 @@
     padding: 0;
   }
 }
+
+ .panel__header--workspace-settings {
+   display: none;
+   
+   @include breakpoint($breakpoint-pad) {
+    display: flex;
+  }
+ }
 
 // PANEL HEADER ICONS
 .panel__header-icon {
